--- a/src/components/routes/navigation/navigation1.styles.scss
+++ b/src/components/routes/navigation/navigation1.styles.scss
@@ -14,14 +14,16 @@
   .nav-links-container {
     width: 50%;
     height: 100%;
-    display: flex;
+    display:flex;
     align-items: center;
     justify-content: flex-end;
+    font-size: larger;
 
     .nav-link {
       padding: 10px 15px;
-      margin: 0 15px;
+      margin: 10px;
       cursor: pointer;
+      
     }
   }
 }
